// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField component should render correctly when required 1`] = `
Array [
  ".container-0-2-1 {
  flex-grow: 1;
}
.input-0-2-2 {
  width: 100%;
  padding: 16px;
  font-size: 16px;
  box-sizing: border-box;
  font-family: Roboto, sans-serif;
  border-style: solid;
  border-radius: 4px;
  letter-spacing: 0.51px;
}
.input-0-2-2::placeholder {
  color: #777777;
  letter-spacing: 0.51px;
}
.helperText-0-2-3 {
  font-size: 12px;
  text-align: left;
  font-family: Roboto, sans-serif;
  letter-spacing: 0.38px;
}
.label-0-2-4 {
  font-size: 14px;
  text-align: left;
  font-family: Roboto, sans-serif;
  letter-spacing: 1.11px;
}
.input-d0-0-2-5 {
  border-color: #bbbbbb;
  height: 56px;
}
.helperText-d1-0-2-6 {
  color: #bbbbbb;
}
.label-d2-0-2-7 {
  color: #bbbbbb;
}",
  <div>
    <div
      class="container-0-2-1"
    >
      <label
        class="label-0-2-4 label-d2-0-2-7"
      >
        Label
        *
      </label>
      <input
        class="input-0-2-2 input-d0-0-2-5"
        data-testid="input"
        required=""
        type="text"
      />
      <span
        class="helperText-0-2-3 helperText-d1-0-2-6"
      >
        Helper text
      </span>
    </div>
  </div>,
]
`;

exports[`TextField component should render correctly with feedback error 1`] = `
Array [
  ".container-0-2-1 {
  flex-grow: 1;
}
.input-0-2-2 {
  width: 100%;
  padding: 16px;
  font-size: 16px;
  box-sizing: border-box;
  font-family: Roboto, sans-serif;
  border-style: solid;
  border-radius: 4px;
  letter-spacing: 0.51px;
}
.input-0-2-2::placeholder {
  color: #777777;
  letter-spacing: 0.51px;
}
.helperText-0-2-3 {
  font-size: 12px;
  text-align: left;
  font-family: Roboto, sans-serif;
  letter-spacing: 0.38px;
}
.label-0-2-4 {
  font-size: 14px;
  text-align: left;
  font-family: Roboto, sans-serif;
  letter-spacing: 1.11px;
}
.input-d0-0-2-5 {
  border-color: #e74627;
  height: 56px;
}
.helperText-d1-0-2-6 {
  color: #e74627;
}
.label-d2-0-2-7 {
  color: #e74627;
}",
  <div>
    <div
      class="container-0-2-1"
    >
      <label
        class="label-0-2-4 label-d2-0-2-7"
      >
        Label
      </label>
      <input
        class="input-0-2-2 input-d0-0-2-5"
        type="text"
      />
      <span
        class="helperText-0-2-3 helperText-d1-0-2-6"
      >
        Helper text
      </span>
    </div>
  </div>,
]
`;

exports[`TextField component should render correctly with feedback success 1`] = `
Array [
  ".container-0-2-1 {
  flex-grow: 1;
}
.input-0-2-2 {
  width: 100%;
  padding: 16px;
  font-size: 16px;
  box-sizing: border-box;
  font-family: Roboto, sans-serif;
  border-style: solid;
  border-radius: 4px;
  letter-spacing: 0.51px;
}
.input-0-2-2::placeholder {
  color: #777777;
  letter-spacing: 0.51px;
}
.helperText-0-2-3 {
  font-size: 12px;
  text-align: left;
  font-family: Roboto, sans-serif;
  letter-spacing: 0.38px;
}
.label-0-2-4 {
  font-size: 14px;
  text-align: left;
  font-family: Roboto, sans-serif;
  letter-spacing: 1.11px;
}
.input-d0-0-2-5 {
  border-color: #569a32;
  height: 56px;
}
.helperText-d1-0-2-6 {
  color: #569a32;
}
.label-d2-0-2-7 {
  color: #569a32;
}",
  <div>
    <div
      class="container-0-2-1"
    >
      <label
        class="label-0-2-4 label-d2-0-2-7"
      >
        Label
      </label>
      <input
        class="input-0-2-2 input-d0-0-2-5"
        type="text"
      />
      <span
        class="helperText-0-2-3 helperText-d1-0-2-6"
      >
        Helper text
      </span>
    </div>
  </div>,
]
`;

exports[`TextField component should render correctly with given size 1`] = `
Array [
  ".container-0-2-1 {
  flex-grow: 1;
}
.input-0-2-2 {
  width: 100%;
  padding: 16px;
  font-size: 16px;
  box-sizing: border-box;
  font-family: Roboto, sans-serif;
  border-style: solid;
  border-radius: 4px;
  letter-spacing: 0.51px;
}
.input-0-2-2::placeholder {
  color: #777777;
  letter-spacing: 0.51px;
}
.helperText-0-2-3 {
  font-size: 12px;
  text-align: left;
  font-family: Roboto, sans-serif;
  letter-spacing: 0.38px;
}
.label-0-2-4 {
  font-size: 14px;
  text-align: left;
  font-family: Roboto, sans-serif;
  letter-spacing: 1.11px;
}
.input-d0-0-2-5 {
  border-color: #bbbbbb;
  height: 48px;
}
.helperText-d1-0-2-6 {
  color: #bbbbbb;
}
.label-d2-0-2-7 {
  color: #bbbbbb;
}",
  <div>
    <div
      class="container-0-2-1"
    >
      <label
        class="label-0-2-4 label-d2-0-2-7"
      >
        Label
      </label>
      <input
        class="input-0-2-2 input-d0-0-2-5"
        type="text"
      />
      <span
        class="helperText-0-2-3 helperText-d1-0-2-6"
      >
        Helper text
      </span>
    </div>
  </div>,
]
`;
